<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pick_file">Pick Instruction Set</string>
    <string name="app_name">SimpleMobileVMApp</string>
    <string name="path">Path:</string>
    <string name="not_available">N/A</string>
    <string name="file">File:</string>
    <string name="execute_rx">Execute Rx</string>
    <string name="execute">Execute</string>
    <string name="output">Output:</string>

</resources>