<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pickInstructionsTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/pick_file"
        android:labelFor="@+id/spinnerFiles"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spinnerFiles"/>

    <Spinner
        android:id="@+id/spinnerFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickInstructionsTextView"
        app:layout_constraintBottom_toTopOf="@id/executionInfoHolder" />

    <LinearLayout
        android:id="@+id/executionInfoHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFiles"
        app:layout_constraintBottom_toTopOf="@+id/outputLabel" >

        <Button
            android:id="@+id/buttonExe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute"
            app:layout_constraintEnd_toStartOf="@+id/executionInfoHolder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFiles"
            app:layout_constraintBottom_toTopOf="@+id/outputLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:text="@string/file"
            android:labelFor="@+id/textViewFile"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/outputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:labelFor="@+id/editTextOutput"
        android:text="@string/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/executionInfoHolder"
        app:layout_constraintBottom_toTopOf="@+id/editTextOutput"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editTextOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars = "vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputLabel"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextOutput"
        app:layout_constraintBottom_toBottomOf="@+id/editTextOutput"/>


</androidx.constraintlayout.widget.ConstraintLayout>